--- a/package.json
+++ b/package.json
@@ -12,8 +12,15 @@
   "dependencies": {
     "bootstrap": "^5.3.5",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.0"
+    "react-github-calendar": "^4.5.6",
+    "react-icons": "^5.5.0",
+    "react-parallax-tilt": "^1.7.289",
+    "react-pdf": "^9.2.1",
+    "react-router-dom": "^7.5.0",
+    "react-tsparticles": "^2.12.2",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
