--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.5",
+    "next": "^15.2.4",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
@@ -20,6 +21,7 @@
     "react-pdf": "^9.2.1",
     "react-router-dom": "^7.5.0",
     "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3.8.1",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
@@ -27,10 +29,13 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.3",
     "vite": "^6.2.0"
   }
 }
